# CPP_CI

./: CMakeLists.txt  README.md  appveyor.yml
app/: CMakeLists.txt
app/src/: main.cpp
lib/: CMakeLists.txt
lib/include/: calc.h  calc_step.h  logger.h
lib/src/: calc.cpp  calc_step.cpp  logger.cpp
lib/test/: CMakeLists.txt
lib/test/src/: calc_step_test.cpp  calc_test.cpp  logger_test.cpp  main.cpp
