set(LIB_NAME "${PROJECT_NAME}Lib")

set(LIBRARY_MODULE_PATH "${PROJECT_SOURCE_DIR}/lib")
set(LIBRARY_SRC_PATH "${LIBRARY_MODULE_PATH}/src")
set(LIBRARY_INCLUDE_PATH "${LIBRARY_MODULE_PATH}/include")

include_directories(${LIBRARY_INCLUDE_PATH} ${THIRD_PARTY_INCLUDE_PATH})

file(GLOB LIB_HEADER_FILES "${LIBRARY_INCLUDE_PATH}/*.h")
file(GLOB LIB_SOURCE_FILES "${LIBRARY_SRC_PATH}/*.cpp")

add_library(${LIB_NAME} STATIC ${LIB_SOURCE_FILES} ${LIB_HEADER_FILES})

set(LIBRARY_INCLUDE_PATH ${LIBRARY_INCLUDE_PATH} PARENT_SCOPE)
set(LIB_NAME ${LIB_NAME} PARENT_SCOPE)

enable_testing()
add_subdirectory(test)